--- a/My First css/style.css
+++ b/My First css/style.css
@@ -6,7 +6,7 @@
     background-color: brown;
     border: 10px solid black;
     margin: 5px;
-    padding: 10px
+    padding: 10px;
     
 }
 #your{
